# two_phase_locking

2pl_rina/: 2pl.cpp  CMakeLists.txt  database.cpp  database.hh  definition.hh  lock.cpp  transaction.cpp  transaction.hh
